--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,68 @@
+require: rubocop-rspec
+
 AllCops:
-  TargetRubyVersion: 2.4
+  NewCops: enable
+  SuggestExtensions: false
 
 Style/StringLiterals:
   Enabled: true
-  EnforcedStyle: double_quotes
+  EnforcedStyle: single_quotes 
 
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
+Style/Documentation:
+  Enabled: false
 
-Layout/LineLength:
-  Max: 120
+Style/WordArray:
+  Exclude:
+    - lib/kanrisuru/util/dmi_type.rb
+
+Lint/SymbolConversion:
+  Exclude:
+    - lib/kanrisuru/util/dmi_type.rb
+
+Naming/InclusiveLanguage:
+  Exclude:
+    - lib/kanrisuru/core/dmi.rb
+    - spec/unit/core/dmi_spec.rb
+
+Naming/MethodParameterName:
+  Exclude:
+    - spec/functional/os_package_spec.rb
+
+Metrics/AbcSize:
+  Enabled: false
+
+Metrics/CyclomaticComplexity:
+  Enabled: false
+
+Metrics/PerceivedComplexity:
+  Enabled: false
+
+Metrics/MethodLength:
+  Enabled: false
+
+Metrics/ClassLength:
+  Enabled: false
+
+Metrics/ModuleLength:
+  Enabled: false
+
+Metrics/BlockLength:
+  Enabled: false
+
+Lint/ConstantDefinitionInBlock:
+  Enabled: false
+
+RSpec/FilePath:
+  SpecSuffixOnly: true
+
+RSpec/ExampleLength:
+  Enabled: false
+
+RSpec/MultipleExpectations: 
+  Enabled: false
+
+RSpec/BeforeAfterAll:
+  Enabled: false
+
+RSpec/LeakyConstantDeclaration:
+  Enabled: false
